# Fluid-Simulation

./: .gitignore  CMakeLists.txt  cuda_kernel.cu  input.cpp  input.hpp  kernel.cu  main.cpp  requirements.sh  setup_and_run.sh  simulation.cpp  simulation.hpp
include/: fluidsolver3d.h  grids3d.h  rendercontext3d.h  renderobject3d.h  vec2d.h  vec3d.h
src/: fluidsolver3d.cpp  main.cpp  simulation.cu
